<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:src="@drawable/henlo2"
            android:contentDescription="@string/exemplary_description" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/enter_username" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_email" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_password" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/password2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/enter_password_2" />

        <EditText
            android:id="@+id/password2EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/Register"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>