<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/exemplary_txt"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/drinkImg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/drinkImg_content_description" />

    <TextView
        android:id="@+id/textViewIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_below="@+id/drinkImg"
        android:text="@string/ingredients"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />
    <ListView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewIngredients"
        android:layout_toRightOf="@+id/imageView"
        android:paddingTop="10dp" />

</RelativeLayout>