<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/loginImg"
        android:layout_width="0dp"
        android:layout_height="195dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/RegisterImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/henlo2" />

    <EditText
        android:id="@+id/usernameLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginImg"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="64dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginImg"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/usernameLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginImg"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="64dp"
        android:hint="@string/enter_username"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginImg" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"

        android:layout_marginTop="44dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLoginTextView"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/passwordLoginLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="44dp"
        android:hint="@string/enter_username"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLoginTextView" />
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/Register"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLoginLoginTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>